fixed login button to be same color and style when on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,7 @@ footer {
 h1 {
     text-align: center;
     color: #B0B7C4;
+    font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -190,7 +191,6 @@ input[type="submit"], input[type="button"]{
 }
 
 .btnExpenseLeft, .btnExpenseRight {
-
     width: inherit;
     height: 20px;
     margin: 0;
@@ -245,6 +245,10 @@ input[type="submit"], input[type="button"]{
 .loginButton {
     color: black;
     font-size: 50%;
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-weight: bolder;
+    margin: 20px;
 }
 
 #btnRegister {
